[package]
name = "tools"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
minijinja = "2.2.0"
regex = "1.10.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.127"
uuid = { version = "1.10.0", features = ["v4"] }

[profile.release]
debug = true
